RESOLVED FIXED 234601
[GTK][a11y] WTR: handle missing cases in isAttributeSettable with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=234601
Summary [GTK][a11y] WTR: handle missing cases in isAttributeSettable with ATSPI
Carlos Garcia Campos
Reported 2021-12-22 06:16:27 PST
We need to handle aria-readly attribute and the combobox and listbox elements
Attachments
Patch (2.49 KB, patch)
2021-12-22 06:18 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-12-22 06:18:30 PST
Carlos Garcia Campos
Comment 2 2021-12-23 00:57:14 PST
Note You need to log in before you can comment on or make changes to this bug.