[GTK][a11y] WTR: handle missing cases in isAttributeSettable with ATSPI https://bugs.webkit.org/show_bug.cgi?id=234601

Reviewed by Adrian Perez de Castro.

We need to handle aria-readonly attribute and the combobox and listbox elements.

* WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElement::isAttributeSettable):


Canonical link: https://commits.webkit.org/245531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287391 268f45cc-cd09-0410-ab3c-d52691b4dbfc